Code clean; refactoring